--- a/static/style.css
+++ b/static/style.css
@@ -229,3 +229,22 @@ input:checked + .slider:before {
 @keyframes spinner-border {
     to { transform: rotate(360deg); }
 }
+
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+#loading-overlay .spinner {
+    width: 5rem;
+    height: 5rem;
+    border-width: 0.5em;
+}
